--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1 {
 }
 
 body {
-  background-image: url("mtrainier2.jpeg");
+  background-image: url("mtrainierfinally.jpeg");
   background-size: cover;
   background-attachment: fixed;
   background-position: top;
